Fixed: Social icon font cutoff in Chrome

--- a/assets/css/theme-rtl.css
+++ b/assets/css/theme-rtl.css
@@ -150,10 +150,10 @@
 .header-top-mini .header-text {
 	line-height: 20px;
 }
-.header-top-mini .tb-social-icons > li > a {
+.header-top-mini .header-top .tb-social-icons > li > a {
 	font-size: 20px;
-	width: 20px;
-	height: 20px;
+	width: 22px;
+	height: 22px;
 }
 .header-top-nav {
 	margin: 0;
