--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -151,8 +151,8 @@
 }
 .header-top-mini .header-top .tb-social-icons > li > a {
 	font-size: 20px;
-	width: 20px;
-	height: 20px;
+	width: 22px;
+	height: 22px;
 }
 .header-top-nav {
 	margin: 0;
