--- a/framework/assets/css/themeblvd-rtl.css
+++ b/framework/assets/css/themeblvd-rtl.css
@@ -2340,20 +2340,21 @@ html[xmlns] .slides {
 .tb-social-icons > li {
 	float: left;
 	list-style: none !important;
-	margin: 0 1px;
+	margin: 0;
 	padding: 0;
 }
 .element-contact .tb-social-icons > li {
-	margin: 1px;
+	margin: 1px 0;
 }
 .tb-social-icons > li > a {
 	font-size: 24px;
 	color: inherit;
 	display: block;
 	outline: none;
+	text-align: center;
 	text-decoration: none !important;
-	width: 24px;
-	height: 24px;
+	width: 26px;
+	height: 26px;
 }
 .tb-social-icons.dark > li > a {
 	color: #101010;
